--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/fullstack 
+spring.datasource.url=jdbc:mysql://host.docker.internal:3307/fullstack
 spring.datasource.username=root
 spring.datasource.password=Sairam@1970
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+
