--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.datasource.url=jdbc:mysql://host.docker.internal:3307/fullstack
-spring.datasource.username=root
-spring.datasource.password=Sairam@1970
+# Database configuration
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://db:3306/fullstack}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Sairam@1970}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 
+# Optional: show SQL in logs
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
