--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-# Database configuration
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://db:3306/fullstack}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Sairam@1970}
+# Database configuration for Aiven MySQL
+spring.datasource.url=jdbc:mysql://fullstack-db-ajaybecse03.c.aivencloud.com:13592/defaultdb?useSSL=true
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_ghg9tpB5iVc_3KwcQI3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
