--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database configuration for Aiven MySQL
-spring.datasource.url=jdbc:mysql://fullstack-db-ajaybecse03.c.aivencloud.com:13592/defaultdb?useSSL=true
+spring.datasource.url=jdbc:mysql://fullstack-db-ajaybecse03.c.aivencloud.com:13592/defaultdb?useSSL=true&requireSSL=true&allowPublicKeyRetrieval=true
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_ghg9tpB5iVc_3KwcQI3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,4 +10,3 @@ spring.jpa.hibernate.ddl-auto=update
 # Optional: show SQL in logs
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
