--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-# Database configuration for Aiven MySQL
-spring.datasource.url=jdbc:mysql://fullstack-db-ajaybecse03.c.aivencloud.com:13592/defaultdb?useSSL=true&requireSSL=true&allowPublicKeyRetrieval=true
+# -----------------------
+# Aiven MySQL Database Configuration
+# -----------------------
+spring.datasource.url=jdbc:mysql://fullstack-db-ajaybecse03.c.aivencloud.com:13592/defaultdb?ssl-mode=REQUIRED&allowPublicKeyRetrieval=true
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_ghg9tpB5iVc_3KwcQI3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
-
-# Optional: show SQL in logs
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
